# pylayers-py3

./: configure.py  environment.yml  pyproject.toml
pylayers/antprop/: antenna.py  antssh.py  antvsh.py  channel.py  coeffModel.py  coverage.py  diff.py  diffRT.py  diffraction.py  interactions.py  loss.py  rays.py  signature.py  slab.py  spharm.py  statModel.py
pylayers/antprop/examples/: ex_AFLegendre.py  ex_antenna5.py  ex_antenna51.py  ex_antenna6.py  ex_antvsh.py  ex_meta.py  ex_runsig.py  ex_signature.py  ex_tud2.py  ex_vsh3.py
pylayers/antprop/tests/: post-Friis.py  test_F.py  test_SSHFunc.py  test_air.py  test_diffractionRT.py  test_signatures.py  test_vecang.py
pylayers/em/openems/: dumpbox.py  excitation.py  geometry.py  nf2ff.py  openems.py
pylayers/exploit/: simnet.py
pylayers/gis/: building.py  ezone.py  furniture.py  gisutil.py  kml.py  layout.py  lireifc.py  lireifc2.py  multi.py  osmparser.py  readvrml.py  selectl.py  srtm.py
pylayers/gis/examples/: ex_furniture.py
pylayers/gis/test/: algo_search_convex.py  test_layout.py  test_layout_shapely.py
pylayers/gui/: PylayersGui.py  editor.py  editor_select.py
pylayers/location/: localization.py  locarule.py  observables.py
pylayers/location/algebraic/: crlb.py  hdf.py  rss.py  tdoa.py  toa.py
pylayers/location/geometric/: exploit_CDF.py  test_location_geometric.py
pylayers/measures/: Hikobstart.py  cormoran.py  easyRadio.py  exploith5.py  measmimo.py  mesmimo.py  mesuwb.py
pylayers/measures/parker/: smparker.py
pylayers/measures/spectrum/: r3182.py
pylayers/measures/switch/: ni_usb_6501.py
pylayers/measures/test/: mimo_measurement.py  test_switch.py
pylayers/measures/vna/: E5072A.py
pylayers/mobility/: agent.py  trajectory.py
pylayers/mobility/ban/: DeuxSeg.py  body.py  c3d.py  c3dtools.py  dist.py
pylayers/mobility/transit/: Person.py  World.py  vec3.py
pylayers/network/: communication.py  emsolver.py  net.py  network.py  prioritydict.py  show.py  wsn.py
pylayers/signal/: ED.py  bsignal.py  device.py  mimo.py  standard.py  waveform.py
pylayers/signal/tests/: test_ED.py
pylayers/simul/: exploit.py  exploit_simulnet.py  link.py  radionode.py  simulnet.py  simultraj.py
pylayers/simul/examples/: ex_simulem.py  ex_w2.py
pylayers/simul/tests/: test_DLink.py  test_MIMO3.py
pylayers/util/: CDF.py  basemap_compat.py  delay_association.py  easygui.py  geomutil.py  graphutil.py  mayautil.py  plotutil.py  project.py  pymysqldb.py  pyutil.py  save.py  vect.py  versions.py
pylayers/util/tests/: test_geomutil.py  test_intersect3.py  test_intersect_cone_seg.py  test_intersect_line_seg.py
pylayers_project/: project.conf
pylayers_project/geom/: defstr.off
pylayers_project/output/: Links_0_defstr.lay.h5
(+15 files in other folders)
