[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylayers-py3"
version = "1.0.0"
description = "Modern Python 3 radio propagation simulation platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Original: B. Uguen, N. Amiot, M. Laaraiedh"},
    {name = "Python 3 Port: Community"},
]
maintainers = [
    {name = "Community", email = "pylayers-py3@example.com"},
]
keywords = ["radio", "propagation", "simulation", "electromagnetics", "rf", "wireless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.6.0",
    "networkx>=3.0",
    "shapely>=2.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "simpy>=4.0.0",
    "bitstring>=4.0.0",
    "h5py>=3.8.0",
    "tqdm>=4.60.0",
    "triangle>=20220202",
    "simplekml>=1.3.0",
    "pyproj>=3.4.0",
    "osmapi>=1.2.0",
    "geocoder>=1.38.0",
]

[project.optional-dependencies]
visualization = [
    "pyvista>=0.42.0",
    "plotly>=5.0.0",
    "cartopy>=0.21.0",
    "mayavi>=4.8.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
all = [
    "pylayers-py3[visualization,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/pylayers-py3"
Documentation = "https://pylayers-py3.readthedocs.io"
Repository = "https://github.com/yourusername/pylayers-py3"
"Bug Tracker" = "https://github.com/yourusername/pylayers-py3/issues"
"Original Project" = "https://github.com/pylayers/pylayers"

[tool.setuptools]
packages = ["pylayers"]
include-package-data = true

[tool.setuptools.package-data]
pylayers = ["data/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]